# hosted_kcc

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.example.yml  docker-compose.suwayomi.yml  pyproject.toml
.github/scripts/: docker-smoke.sh
.github/workflows/: ci.yml  publish-image.yml
docs/superpowers/plans/: 2026-05-05-hosted-kcc-mvp.md
docs/superpowers/specs/: 2026-05-05-hosted-kcc-design.md
hosted_kcc/: cli.py  config.py  converter.py  jobs.py  planner.py  scanner.py  service.py
tests/: test_cli.py  test_config.py  test_jobs_converter.py  test_scanner_planner.py  test_service.py
