[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hosted-kcc"
version = "0.1.0"
description = "Dockerized watched-folder service for Kindle Comic Converter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
  "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
hosted-kcc = "hosted_kcc.cli:main"

[tool.setuptools.packages.find]
include = ["hosted_kcc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
